improve-reliability-with-kubernetes/manifests/v3/frontend/deployment.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: frontend
  labels:
    app: frontend
    release: gophercon
    version: v3
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: frontend
        release: gophercon
    spec:
      terminationGracePeriodSeconds: 30
      containers:
        - name: frontend
          image: davyj0nes/gophercon-frontend:v0.4.0
          ports:
            - containerPort: 4200
          resources:
            limits:
              cpu: 200m
              memory: 512Mi
            requests:
              cpu: 100m
              memory: 256Mi
        - name: proxy
          image: 'haproxy:2.0.4'
          ports:
            - containerPort: 80
            - containerPort: 9091
          volumeMounts:
            - mountPath: /usr/local/etc/haproxy/
              name: haproxy-cfg
          resources:
            limits:
              cpu: 200m
              memory: 512Mi
            requests:
              cpu: 100m
              memory: 256Mi
        - name: ambassador
          image: davyj0nes/breaker:0.0.2
          command: ["breaker", "-external", "http://feelgood-api"]
          ports:
            - containerPort: 8888
          resources:
            limits:
              cpu: 200m
              memory: 256Mi
            requests:
              cpu: 100m
              memory: 64Mi
      volumes:
        - name: haproxy-cfg
          configMap:
            name: haproxy-config-frontend
