improve-reliability-with-kubernetes/manifests/v3/frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  labels:
    app: frontend
    release: gophercon
    version: v3
spec:
  selector:
    app: frontend
    release: gophercon
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
    - name: mertrics
      protocol: TCP
      port: 9091
      targetPort: 9091
    - name: breaker-mertrics
      protocol: TCP
      port: 8888
      targetPort: 8888
